kubernetes/apps/default/homepage/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: default
  annotations:
    gethomepage.dev/enabled: "false"
    gethomepage.dev/name: "Homepage"
    gethomepage.dev/description: "A modern, secure, application dashboard"
    gethomepage.dev/group: "System"
    gethomepage.dev/icon: "homepage.png"
    # Authentik forward auth annotations
    nginx.ingress.kubernetes.io/auth-url: "http://ak-outpost-homepage-forward-auth.kube-system.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx"
    nginx.ingress.kubernetes.io/auth-signin: "https://homepage.${SECRET_DOMAIN}/outpost.goauthentik.io/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid"
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
      proxy_set_header X-Proxy-Secret 56915e032a849697664f1ee8567e8ffe134c7e2dd19b3d2ce16b42c7a487799cb232e4c69878081ea6e265d22693c1283e20c2fe2c06fff5ef986080e78d0263;
  labels:
    gethomepage.dev/enabled: "false"
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - "homepage.${SECRET_DOMAIN}"
  rules:
    - host: "homepage.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
